--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,8 @@
             <div class="list">
                 <ul>
                     <li><a href="">首页</a></li>
+                       <ul class="subMenu">
+                       </ul>
 
                     <li><a href="">推荐排行榜</a>
                         <ul class="subMenu" style="display:none;">
@@ -83,4 +85,12 @@
 </div>
 
 </body>
+<script>
+    window.onload= function(){
+        var subMenu=document.getElementsByClassName("subMenu");
+        subMenu.style.display="none";
+
+
+    }
+</script>
 </html>
